[package]
name = "comate-agent"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/archguard/comate"
documentation = "https://github.com/archguard/comate"
homepage = "https://github.com/archguard/comate"
description = """
 Co-mate is an AI-powered architecture copilot, design and governance tools.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
    "guarding.guarding",
    "_fixtures",
    "docs",
    "examples",
]

[[bin]]
name = "agent"

[dependencies]

# embedding
ort = "1.14.6"
tokenizers = "0.13.3"
ndarray = "0.15"

# log
log = "0.4.18"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }

# error handling
anyhow = "1.0.68"
thiserror = "1.0.38"

# serde
serde = "1.0.152"
erased-serde = "0.3.25"
serde_json = "1.0.91"

# Cache
uluru = "3.0.0"

# RPC Server
fern = "0.6.2"
xi-rpc = "0.3.0"
chrono = "0.4.24"
dirs = "5.0.1"

# Segmentation fault in time： https://github.com/archguard/co-mate/security/dependabot/2
time = "=0.3.22"